# lawnmower-buddha-core

./: .gitignore  README.md  pyproject.toml
groundtruth/: __init__.py
groundtruth/analysis/: __init__.py
groundtruth/briefs/: __init__.py
groundtruth/cli/: __init__.py
groundtruth/ingest/: __init__.py
groundtruth/ledger/: __init__.py
groundtruth/validate/: __init__.py
